--- a/intermediate-html/forms.html
+++ b/intermediate-html/forms.html
@@ -7,9 +7,15 @@
 
 	<h1>Login</h1>
 
-	<input type="text" placeholder="username">
-	<input type="password" placeholder="password">
-	<input type="submit">
+	<!-- action - where the form sends data to -->
+	<!-- method - what HTTP method (get/post) -->
+
+	<!-- <form action="http://wikipedia.org" method="GET"> -->
+	<form>
+		<input name="username" type="text" placeholder="username">
+		<input name="password" type="password" placeholder="password">
+		<input type="submit">	
+	</form>	
 
 </body>
 </html>
