--- a/intermediate-html/forms.html
+++ b/intermediate-html/forms.html
@@ -10,10 +10,25 @@
 	<!-- action - where the form sends data to -->
 	<!-- method - what HTTP method (get/post) -->
 
-	<!-- <form action="http://wikipedia.org" method="GET"> -->
-	<form>
-		<input name="username" type="text" placeholder="username">
-		<input name="password" type="password" placeholder="password">
+	<!-- <form action="http://wikipedia.org" method="GET">	
+		<label>
+			Username:
+			<input name="username" type="text" placeholder="username">
+		</label>
+		<label>
+			Password:
+			<input name="password" type="password" placeholder="password">
+		</label>
+		<input type="submit">	
+	</form> -->
+
+	<form action="http://wikipedia.org" method="GET">	
+		<label for="username">Email:</label>
+		<input id="username" name="username" type="email" placeholder="email" required>
+		
+		<label for="password">Password:</label>
+		<input id="password" name="password" type="password" placeholder="password" required>
+		
 		<input type="submit">	
 	</form>	
 
