--- a/bootstrap-4/Bootstrap4_Code/12_Grid_Flexbox/index.html
+++ b/bootstrap-4/Bootstrap4_Code/12_Grid_Flexbox/index.html
@@ -21,6 +21,50 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem culpa et tempora corporis? Tempora commodi perspiciatis omnis quos ex similique!
             </div>
             <div class="col-sm-3 bg-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, officia quia id vero placeat saepe voluptatum mollitia nulla rerum accusamus eveniet voluptas eligendi iusto quaerat magnam recusandae aliquam minima cumque sapiente eaque numquam alias. Soluta totam recusandae perferendis consequatur. Illum beatae facilis repellat nemo iure, rem in corporis! Unde, corrupti.
+            </div>
+            <div class="col-sm-3 bg-warning">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem culpa et tempora corporis? Tempora commodi perspiciatis omnis quos ex similique!
+            </div>
+        </div>
+        <div class="row border justify-content-center align-items-end">
+            <div class="col-2 bg-primary align-self-start">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, dignissimos.
+            </div>
+            <div class="col-2 bg-primary align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, dignissimos.
+            </div>
+            <div class="col-2 bg-success">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe ullam eos quia ipsam praesentium quod magni beatae veniam in incidunt quibusdam a sunt est, voluptate similique. Nesciunt maiores modi sequi.
+            </div>
+            <div class="col-2 bg-primary align-self-start">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, dignissimos.
+            </div>
+            <div class="col-2 bg-primary align-self-end">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, dignissimos.
+            </div>
+
+            <div class="row text-center justify-content-between">
+                <div class="col-md-6 col-lg-5 bg-danger">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ipsa fugit excepturi. Deserunt eos esse voluptas aspernatur ipsa repellat beatae?
+                </div>
+                <div class="col-md-6 col-lg-5 bg-danger">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ipsa fugit excepturi. Deserunt eos esse voluptas aspernatur ipsa repellat beatae?
+                </div>
+
+            </div>
+
+            
+
+        </div>
+    </div>
+    <!-- <div class="container">
+        <h1 class="text-center display-4">Grid + Flexbox</h1>
+        <div class="row border justify-content-around align-items-center">
+            <div class="col-sm-3 bg-warning">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem culpa et tempora corporis? Tempora commodi perspiciatis omnis quos ex similique!
+            </div>
+            <div class="col-sm-3 bg-info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore minus ad ab, explicabo voluptatem officia. Voluptas sed odio nemo, nostrum cumque dolorem quam, repellat nam porro ex aperiam, ipsa eveniet numquam cupiditate sapiente esse fugiat? Et tempora eveniet inventore voluptates magnam obcaecati quasi, at, consectetur adipisci natus sunt blanditiis.            </div>
             <div class="col-sm-3 bg-warning">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem culpa et tempora corporis? Tempora commodi perspiciatis omnis quos ex similique!
@@ -52,7 +96,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic fugit quisquam libero distinctio blanditiis, error quos architecto velit aut atque.
             </div>
         </div>
-    </div>
+    </div> -->
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
